--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "db:generate": "npx drizzle-kit generate --dialect postgresql --schema ./src/drizzle/schema.ts --out ./src/migrations",
+    "db:migrate": "npx drizzle-kit migrate --config ./configs/get-drizzle.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "drizzle-kit": "^0.27.1",
     "drizzle-orm": "^0.36.0",
     "ioredis": "^5.4.1",
     "pg": "^8.13.1",
