--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "db:generate": "npx drizzle-kit generate --dialect postgresql --schema ./src/drizzle/schema.ts --out ./src/migrations",
     "db:migrate": "npx drizzle-kit migrate --config ./configs/get-drizzle.config.ts",
+    "db:push": "npx drizzle-kit push --config ./configs/get-drizzle.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
