added info about how to run app in the Docker

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-DB_URL="postgresql://username:password@localhost:port/database"
+DB_URL="postgresql://usa:usa@localhost:5432/usa"
 
 SERVER_PORT=4000
 SERVER_PREFIX="api/v1"
